# Gadget

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/compile-interfaces/compile-options-private/: CMakeLists.txt
libs/compile-interfaces/compile-options-public/: CMakeLists.txt
libs/gadget/: CMakeLists.txt  GadgetConfig.cmake
libs/gadget/include/gadget/: error.h  optional-error.h
libs/gadget/src/: gadget.cpp
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/tests/: CMakeLists.txt  error.cpp  optional-error.cpp
